# clairvoyance

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO  docker-compose.yml  pyproject.toml  regex cases
src/: cache_manager.py  config.py  main.py
src/api/: api.py  api_v1.py
src/api/endpoints/: upload.py
src/data_extracting/: extractor.py  filetype.py  validator.py
src/enums/: data_type.py
src/schemas/: extracted_data.py
